Add springboot and swagger (api/v1/swagger-ui.html) with early PipelineController